snugom/tests/ui/validate_url_on_numeric.stderr
error: url validator only supported for string fields
  --> tests/ui/validate_url_on_numeric.rs:14:23
   |
14 |     #[snugom(validate(url))]
   |                       ^^^
